--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.8",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
+    "@types/react-loadable": "^5.5.3",
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
@@ -44,6 +46,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -139,5 +142,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "react-loadable": "^5.5.0"
   }
 }
